fix for overflowing footer

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -95,7 +95,7 @@ footer {
   padding: 0px;
 
   .info {
-    margin: 5px;
+    margin: 5px 0px;
     padding: 10px !important;
     width: 100%;
     position: relative;
